--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile-ts": "tsc --build",
     "compile-less": "lessc src/style.less dist/style.css",
-    "build": "npm run compile-ts && npm run compile-less",
-    "start": "http-server ./dist"
+    "build": "npm run compile-ts && npm run compile-less && npm run copy",
+    "start": "http-server ./dist",
+    "copy": "copyfiles --flat './src/*.html' dist"
   },
   "repository": {
     "type": "git",
@@ -25,6 +26,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "copyfiles": "^2.4.1",
     "http-server": "^14.0.0"
   }
 }
