--- a/webpack trying/package.json
+++ b/webpack trying/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^4.7.1"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "copy-webpack-plugin": "^10.2.0",
     "normalize.css": "^8.0.1"
   }
