--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "cross-env NODE_ENV=development webpack --mode development",
     "build": "cross-env NODE_ENV=production webpack --mode production",
     "watch": "cross-env NODE_ENV=development webpack --mode development --watch",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --mode development --open",
+    "local": "browser-sync start --server --files 'src/pages/index.html'"
   },
   "targets": "> 0.25%, not dead",
   "author": "",
@@ -17,6 +18,7 @@
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "babel-loader": "^8.2.3",
+    "browser-sync": "^2.27.7",
     "clean-webpack-plugin": "^4.0.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
@@ -33,6 +35,7 @@
     "webpack-dev-server": "^4.7.1"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "@fortawesome/fontawesome-free": "^5.15.4",
     "copy-webpack-plugin": "^10.2.0",
     "normalize.css": "^8.0.1"
